--- a/L8.ipynb
+++ b/L8.ipynb
@@ -163,6 +163,7 @@
     }
    ],
    "source": [
+    "#Se evalúa el modelo cargado utilizando los datos robados y se guarda el puntaje original en score_original.\n",
     "score_original = classifier._model.evaluate(\n",
     "  x=x_stealed_loaded,\n",
     "  y=y_stealed_loaded\n",
@@ -215,40 +216,40 @@
     "  ncols=ncols, \n",
     "  figsize=(20, 10)\n",
     ")\n",
-    "\n",
+    "#Se define una lista de valores de eps para probar diferentes niveles de ataque\n",
     "eps_to_try = [1, 1.5, 2, 2.5, 2.7]\n",
     "\n",
     "counter = 0\n",
-    "\n",
+    "#En un bucle for, se realiza lo siguiente: Se crea una nueva instancia de FastGradientMethod con el clasificador y un valor de eps correspondiente al valor en eps_to_try usando el contador.\n",
     "for j in range(ncols):    \n",
     "  attack_fgsm = FastGradientMethod(\n",
     "    estimator=classifier, \n",
     "    eps=eps_to_try[counter]\n",
     "  )\n",
-    "\n",
+    "#Se generan imágenes adversarias utilizando el nuevo ataque FGSM y los datos robados\n",
     "  test_images_adv = attack_fgsm.generate(x=x_stealed_loaded)\n",
     "  axes[j].imshow(X=test_images_adv[0])\n",
     "\n",
     "  # Disabling x and y ticks\n",
     "  axes[j].set_xticks(ticks=[])\n",
     "  axes[j].set_yticks(ticks=[])\n",
-    "\n",
+    "#Se evalúa el modelo cargado utilizando las imágenes adversarias generadas y se guarda la precisión de prueba en test_score.\n",
     "  test_score = classifier._model.evaluate(\n",
     "    x=test_images_adv, \n",
     "    y=y_stealed_loaded\n",
     "  )[1]\n",
-    "\n",
+    "#Se realiza una predicción en la imagen adversaria utilizando el modelo cargado y se guarda en prediction.\n",
     "  prediction = np.argmax(loaded_model.predict(\n",
     "    x=np.expand_dims(a=test_images_adv[0], \n",
     "    axis=0)\n",
     "  ))    \n",
-    "\n",
+    "#Se establece el título del eje con información sobre el valor de eps, la precisión de prueba y la predicción.\n",
     "  axes[j].set_title(\n",
     "    label=f\"Eps value: {eps_to_try[counter]}\\n\"\n",
     "    f\"Test accuracy: {test_score * 100:.2f}%\\n\"\n",
     "    f\"Prediction: {prediction}\"\n",
     "  )\n",
-    "\n",
+    "#Se incrementa el contador en 1\n",
     "  counter += 1\n",
     "\n",
     "plt.show()"
@@ -286,6 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Aplica la defensa defence_adv a las imágenes x_stealed_loaded (presumiblemente imágenes robadas) y guarda el resultado en x_art_def.\n",
     "x_art_def, _ = defence_adv(x_stealed_loaded)\n",
     "x_art_adv_def, _ = defence_adv(test_images_adv)"
    ]
@@ -305,6 +307,7 @@
     }
    ],
    "source": [
+    "#Evalúa el modelo clasificador (classifier._model) usando las imágenes procesadas x_art_def y las etiquetas y_stealed_loaded. El resultado se guarda en score_original.\n",
     "score_original = classifier._model.evaluate(\n",
     "  x=x_art_def,\n",
     "  y=y_stealed_loaded\n",
@@ -343,7 +346,7 @@
     "from keras.layers import Convolution2D, MaxPooling2D, Flatten, Dense\n",
     "\n",
     "tf.compat.v1.disable_eager_execution()\n",
-    "\n",
+    "#Define la constante DIMENSION con un valor de 256 y carga un modelo pre-entrenado llamado 'Amodel' utilizando la función load_model de Keras.\n",
     "DIMENSION = 256\n",
     "loaded_model = load_model('Amodel')\n",
     "x_stealed_loaded = np.load('x_val.npy')\n",
@@ -384,6 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Crea una instancia del ataque CopycatCNN con parámetros como el tamaño del lote, el número de épocas y el número de ejemplos robados.\n",
     "from art.attacks.extraction import CopycatCNN\n",
     "copycat_cnn = CopycatCNN(\n",
     "  batch_size_fit=16,\n",
@@ -400,6 +404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Define una función llamada createBlankModel que crea un nuevo modelo de red neuronal con capas convolucionales y capas densas.\n",
     "def createBlankModel():\n",
     "  stolen_m = Sequential()\n",
     "  stolen_m.add(Convolution2D(32, (3, 3), strides=(1, 1), input_shape=(DIMENSION, DIMENSION, 3), activation='relu'))\n",
@@ -489,11 +494,12 @@
     }
    ],
    "source": [
+    "#Utiliza el ataque CopycatCNN para extraer información del clasificador original utilizando los datos de entrenamiento robados y el modelo creado anteriormente.\n",
     "score_original = classifier._model.evaluate(\n",
     "  x=X_test_s,\n",
     "  y=y_test_s\n",
     ")\n",
-    "\n",
+    "#Evalúa el modelo original y el modelo robado en los datos de prueba y guarda los resultados en las variables score_original y score_stolen respectivamente.\n",
     "score_stolen = stolen_classifier._model.evaluate(\n",
     "  x=X_test_s,\n",
     "  y=y_test_s\n",
@@ -529,6 +535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Crea un clasificador de Keras utilizando un modelo cargado y la defensa de postprocesamiento definida anteriormente.\n",
     "post_processor = ReverseSigmoid(\n",
     "  beta=1.0,\n",
     "  gamma=0.2\n",
@@ -573,7 +580,7 @@
    ],
    "source": [
     "model_stolen_def = KerasClassifier(model=createBlankModel())\n",
-    "\n",
+    "#Utiliza un algoritmo llamado \"CopycatCNN\" para extraer un modelo robado utilizando el modelo en blanco y el clasificador previamente definido.\n",
     "copycat_cnn_def = CopycatCNN(\n",
     "  batch_size_fit=16,\n",
     "  batch_size_query=16,\n",
@@ -604,6 +611,7 @@
     }
    ],
    "source": [
+    "#Evalúa el modelo original y el modelo robado en un conjunto de datos de prueba.\n",
     "score_original = classifier_def._model.evaluate(\n",
     "  x=X_test_s,\n",
     "  y=y_test_s\n",
@@ -619,6 +627,21 @@
     "\n",
     "# Comparing test accuracies\n",
     "print(f\"Original accuracy: {score_original[1]:.2f} \" f\"vs stolen accuracy: {score_stolen[1]:.2f}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Concluciones:\n",
+    "Con el ataque adversidal carga un modelo Keras previamente entrenado, este realiza ataques adversarios utilizando el método del gradiente rápido, tambien genera imágenes adversarias basadas en los datos robados y evalúa la precisión del modelo en estas imágenes. Luego, muestra una figura con las imágenes adversarias generadas utilizando diferentes valores de eps. \n",
+    "\n",
+    "Luego en su defensa tenemos el Spatial Smoothing para aplicar una defensa a las imágenes robadas y las imágenes adversariales, para ello se evalúa un modelo clasificador usando las imágenes procesadas y muestra las pérdidas y precisiones de prueba comparativas entre las imágenes originales y las imágenes procesadas.\n",
+    "\n",
+    "Luego tenemos el ataque de extracción, este realiza un ataque de extracción de información utilizando el algoritmo CopycatCNN, también evalúa el modelo original y el modelo robado en un conjunto de datos de prueba y muestra las pérdidas y precisión de ambos modelos para compararlos como resultado tenemos que  la perdida de data original es de 0.40 contra un 2.99 de data robada perdida lo que significa un buen cambio.\n",
+    "\n",
+    "Y sobre la defensa utilizamos un modelo de clasificación mediante una técnica de postprocesamiento llamada ReverseSigmoid, se utiliza un algoritmo llamado \"CopycatCNN\" para extraer un modelo robado utilizando un modelo en blanco y el modelo de clasificación defendido. luego de ello se evalúaron tanto el modelo original como el modelo robado en un conjunto de datos de prueba, y se imprime la pérdida y precisión de ambos modelos que dio un total (Como se muestra en el codigo) de Original loss: 0.40 vs stolen loss: 7.70 y Original accuracy: 0.94 vs stolen accuracy: 0.18"
    ]
   }
  ],
